Fix issue where content (IndicatorButtons / Dots) was covered by the bottom navigation bar (triggered by scrolling up) on mobile Safari and Chrome

--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -10,6 +10,8 @@
 
   width: 100vw;
   height: 100vh;
+  /*noinspection CssInvalidPropertyValue*/
+  max-height: fill-available;
   background-color: #fff;
 }
 
